# mono-applications

kraliki-lab/services/kraliki-notify/: Dockerfile  bot.pid  ecosystem.config.js  pyproject.toml
previous-gen-apps/focus-kraliki/: .backend.pid  .coverage  .dockerignore  .frontend.pid  .npmignore  .replit  AUDIT_REPORT.md  CLAUDE.md  MGREP_IMPLEMENTATION_SUMMARY.md  README.md  SECURITY.md  SKILL.md  coverage.xml  dev-start.sh  dev-stop.sh  docker-compose.mgrep.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  health_check.sh  package.json  prod-start.sh  prod-stop.sh  pyproject.toml  start-with-agent.sh  start.sh  take-screenshots.cjs  test_e2e.sh  tmp_check_sqlite.py
previous-gen-apps/focus-kraliki/_archive/: DEPLOYMENT_CHECKLIST.md  HANDOFF.md  QUICK_START_GUIDE.md  SWARM_HANDOFF_IMPROVEMENT_SUMMARY.md  TESTING_GUIDE.md  replit.md
previous-gen-apps/focus-kraliki/backend/: .coverage  .dockerignore  Dockerfile  EVENTS_DOCUMENTATION.md  EVENT_INTEGRATION_EXAMPLE.py  FINAL_SUMMARY.txt  ai-demo.py  alembic.ini  coverage.json  coverage.xml  find_silent_exceptions.py  init.sql  init_db.py  pytest.beta.ini  pytest.ini  requirements.txt  start.sh
previous-gen-apps/focus-kraliki/docs/: ACCELERATOR_DEV_ACCOUNTS.md  AI_FIRST_AUDIT.md  AI_FIRST_HYBRID_UX_PLAN.md  AI_FIRST_OPTIMIZATION_AUDIT.md  AI_FIRST_UI_REDESIGN.md  AI_FIRST_VALIDATION.md  API_ADDITIONS.md  COMMAND_HISTORY_AND_TELEMETRY.md  COMPLETION_PLAN.md  COMPLETION_SUMMARY.md  DATABASE_SETUP.md  GAP_COMPLETION_PLAN.md  GEMINI_FILE_SEARCH.md  GOOGLE_OAUTH_SETUP.md  HUD_WORKFLOW_SCENARIOS.md  HYBRID-EXECUTION-GUIDE.md  INTEGRATIONS_MOBILE_GUIDE.md  KEYBOARD_SHORTCUTS.md  MAC_TESTING_GUIDE.md  MIGRATION_STATUS.md  OFFLINE_INFERENCE_STRATEGY.md  PRIVACY_POLICY.md  QUALITY_TESTING_DELIVERABLES.md  SCRIPTS.md  SETTINGS_MIGRATION_SUMMARY.md  SWARM_METHODOLOGY_EXPERIENCE_REPORT.md  TESTING_COVERAGE_REPORT.md  TEST_COVERAGE_PLAN.md  TODO_LIST.md  TRACK_3_ARCHITECTURE.md  TRUST_FAQ.md
previous-gen-apps/focus-kraliki/e2e-tests/: 001-homepage-auth-redirect.md  002-login-flow.md  003-registration-flow.md  004-google-oauth-flow.md  005-dashboard-main-view.md  006-ai-chat-command-center.md  007-quick-action-buttons.md  008-tasks-panel.md  009-timer-pomodoro-panel.md  010-settings-panel.md  011-voice-recording.md  012-onboarding-flow.md  013-dark-mode-toggle.md  014-keyboard-shortcuts.md  015-knowledge-panel.md  README.md
previous-gen-apps/focus-kraliki/evidence/: AGENT1_FINAL_REPORT.md  DEFECTS_SUMMARY.md  README.md  TESTING_AGENT_2_SUMMARY.md  TESTING_SUMMARY.md  defects_template.md  security_findings.md  test_coverage_gaps.md
previous-gen-apps/focus-kraliki/frontend/: .dockerignore  Dockerfile  check_output.txt  package.json  playwright.config.ts  svelte.config.js  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1763552278275-35b27932ed09b.mjs
previous-gen-apps/focus-kraliki/ii-agent/: docker-compose.yaml  run_gaia.py  start.sh  test_focus_tools.py  verify_phase4.py
previous-gen-apps/focus-kraliki/infra/: HETZNER_DEPLOYMENT.md  PLATFORM_INTEGRATION.md  docker-compose.test.yml  ecosystem.config.js
previous-gen-apps/focus-kraliki/keys/: jwt_private.pem  jwt_public.pem
previous-gen-apps/focus-kraliki/mcp/: requirements.txt  server.py
previous-gen-apps/focus-kraliki/mcp-server/: README.md  __init__.py  auth.py  requirements.txt  resources.py  server.py  tools.py
previous-gen-apps/focus-kraliki/module/: index.js  standalone.js
previous-gen-apps/focus-kraliki/scripts/: backup.sh  build.sh  create-dev-accounts.py  db-reset.sh  debug-app.js  deploy-hetzner.sh  deploy.sh  e2e-test-manual.sh  generate-badges.js  generate-ed25519-keys.sh  generate_academy_pdfs.py  index-docs.py  monitor.sh  restore.sh  run-week34-validation.sh  screenshot-ui.js  security-check.js  setup-dev.sh  setup-enhanced.sh  setup-env.sh  setup-mgrep.sh  setup.sh  simulate_user.py  start-production.sh  start.sh  status.sh  test-integration.sh  test-mgrep.sh  test-runner.js  test-suite.sh  test.sh  upgrade-accelerator-roles.sql  verify-app.js  watch-docs.py
previous-gen-apps/focus-kraliki/settings/: IMPLEMENTATION_GUIDE.md  README.md
previous-gen-apps/focus-kraliki/sunday-completion/: AUDIT_CHECKLIST.md  DEVELOPER_AUDIT.md  USER_AUDIT.md
previous-gen-apps/focus-kraliki/test-results/: .last-run.json
previous-gen-apps/focus-kraliki/tests/: e2e-test.js  manual-auth-test.js  playwright.config.enhanced.ts  playwright.config.ts  proof-test.js  test-app.js  test-auth.js
previous-gen-apps/sense-kraliki/: .dockerignore  AUDIT_REPORT.md  CLAUDE.md  Dockerfile  README.md  SECURITY.md  SKILL.md  docker-compose.yml  ecosystem.config.js  pyproject.toml  test_ssrffix.py
previous-gen-apps/sense-kraliki/ai-readiness-tool/: README.md  questionnaire.md  scoring.md
previous-gen-apps/sense-kraliki/app/: __init__.py  main.py
previous-gen-apps/sense-kraliki/docs/: MAC_TESTING_GUIDE.md  TELEGRAM_STARS_VERIFICATION.md
previous-gen-apps/sense-kraliki/e2e-tests/: 001-start-onboarding.md  002-sense-command.md  003-dream-analysis.md  004-biorhythm.md  005-astrology.md  006-remedies.md  007-settings.md  008-subscription.md  009-audit-booking.md  010-admin-stats.md  011-data-sources.md  README.md
previous-gen-apps/sense-kraliki/tests/: __init__.py  conftest.py  test_analytics.py  test_handlers.py  test_persistence.py  test_services.py
previous-gen-apps/telegram-tldr/: .coverage  .dockerignore  AUDIT_REPORT.md  CLAUDE.md  Dockerfile  LIN-VD-252.sh  SKILL.md  VD-373_IMPLEMENTATION_PLAN.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  test_payment_validation.py
previous-gen-apps/telegram-tldr/.mypy_cache/: missing_stubs
previous-gen-apps/telegram-tldr/app/: main.py
previous-gen-apps/telegram-tldr/docs/: MAC_TESTING_GUIDE.md  STRIPE_SETUP.md  (+2 more)
previous-gen-apps/voice-kraliki/: .coverage  .dockerignore  .replit  AUDIT_REPORT.md  CLAUDE.md  E2E_TEST_STATUS.md  README.md  SECURITY.md  SKILL.md  coverage.xml  docker-compose.monitoring.prod.yml  docker-compose.yml  ecosystem.config.js  pyproject.toml  replit.md
(+20947 files in other folders)
