[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.5.8",
    "alembic>=1.17.1",
    "anthropic>=0.72.1",
    "asyncpg>=0.30.0",
    "bcrypt>=5.0.0",
    "cryptography>=46.0.3",
    "deepgram-sdk>=5.3.0",
    "email-validator>=2.3.0",
    "fastapi>=0.115.6",
    "google-generativeai>=0.8.5",
    "openai>=2.7.2",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pyjwt>=2.10.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "redis>=7.0.1",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.44",
    "stripe>=11.0.0",
    "telnyx>=3.12.1",
    "twilio>=9.8.6",
    "uvicorn>=0.38.0",
    "pywebpush>=2.0.0",
    "reportlab>=4.4.7",
    "numpy>=2.4.0",
]

[tool.pytest.ini_options]
# Exclude directories that have their own test setup or are not part of the main test suite
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
norecursedirs = ["ii-agent", "vendor", "node_modules", ".venv", "_archive", "frontend"]
