[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sense-kraliki"
version = "0.1.0"
description = "Sense by Kraliki (formerly SenseIt) - All-in-one sensitivity tracking for HSPs"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "aiogram>=3.15.0",
    "httpx>=0.28.0",
    "redis>=5.2.0",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "google-generativeai>=0.8.0",
    "pyswisseph>=2.10.0",
    "apscheduler>=3.10.0",
    "python-dateutil>=2.9.0",
    "pillow>=11.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
