[project]
name = "tldr-bot"
version = "0.1.0"
description = "Telegram GroupChat TL;DR Bot - Summarize busy chats"
requires-python = ">=3.11"
 dependencies = [
     "fastapi>=0.115.0",
     "uvicorn[standard]>=0.32.0",
     "pydantic>=2.10.0",
     "pydantic-settings>=2.6.0",
     "aiogram>=3.15.0",
     "redis>=5.2.0",
     "httpx>=0.28.0",
     "google-generativeai>=0.8.0",
     "python-dotenv>=1.0.0",
     "feedparser>=6.0.11",
     "gTTS>=2.5.0",
     "langdetect>=1.0.9",
     "stripe>=11.0.0",
     "trafilatura>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[project.scripts]
test = "pytest:main"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]
