[project]
name = "cc-lite-2026"
version = "2.0.0"
description = "AI-powered call center platform with enterprise-grade voice AI operations"
requires-python = ">=3.13"
dependencies = []

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
norecursedirs = ["_archive", "node_modules", ".venv", ".git"]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "mypy>=1.19.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "sqlalchemy>=2.0.36",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.121.3",
    "httpx>=0.28.1",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.32.1",
    "websockets>=14.1",
    "cryptography>=43.0.3",
    "pyjwt>=2.10.1",
    "passlib>=1.7.4",
    "email-validator>=2.2.0",
    "redis>=5.2.1",
    "slowapi>=0.1.9",
    "deepgram-sdk>=3.9.0,<4.0.0",
    "openai>=1.57.0",
    "google-generativeai>=0.8.3",
    "twilio>=9.0.0",
    "telnyx>=3.4.0",
    "pynacl>=1.6.0",
    "boto3>=1.35.0",
    "azure-storage-blob>=12.23.0",
    "sentry-sdk>=2.19.2",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "pytz>=2024.1",
    "aiofiles>=23.0.0",
    "jinja2>=3.1.0",
    "qdrant-client>=1.7.0",
    "python-multipart>=0.0.9",
    "numpy>=1.24.0",
    "scipy>=1.14.0",
    "soundfile>=0.12.0",
    "stripe>=14.0.0",
    "bcrypt>=4.0.0",
    "audioop-lts>=0.2.1",
]
