[project]
name = "kraliki-notify"
version = "0.1.0"
description = "Telegram bot for swarm notifications and monitoring"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.0.0",
    "pydantic-settings>=2.0.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "aiofiles>=23.0.0",
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
]

[tool.uv]
dev-dependencies = [
    "black>=23.0.0",
    "ruff>=0.1.0",
]
