[project]
name = "auth-core"
version = "0.2.0"
description = "Stack 2026 JWT Authentication with Zitadel JWKS and Ed25519 support"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyjwt[crypto]>=2.8.0",
    "cryptography>=42.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
redis = ["redis>=5.0.0"]
fastapi = ["fastapi>=0.110.0"]
zitadel = ["httpx>=0.27.0"]
all = ["redis>=5.0.0", "fastapi>=0.110.0", "httpx>=0.27.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auth_core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
